--- a/changgou-parent/changgou-common/pom.xml
+++ b/changgou-parent/changgou-common/pom.xml
@@ -34,11 +34,18 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <!--微信支付-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.wxpay</groupId>-->
-            <!--<artifactId>wxpay-sdk</artifactId>-->
-            <!--<version>0.0.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.github.wxpay</groupId>
+            <artifactId>wxpay-sdk</artifactId>
+            <version>0.0.3</version>
+            <!--排除掉slf4j-simple-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <!--httpclient支持-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
