--- a/changgou-parent/changgou-service/changgou-service-pay/pom.xml
+++ b/changgou-parent/changgou-service/changgou-service-pay/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>changgou-service-pay</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou-service-pay-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
